2009-05-16  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (XamlElementInfo::SetIsCDataVerbatim,
	XamlElementInfo::IsCDataVerbatim): new methods to set and get a
	flag telling the cdata_handler to not collapse/remove
	whitespace. <clr:String> requires this.
	(PrimitiveNamespace::FindElement): for the "String" case, call
	XamlElementInfo::SetIsCDataVerbatim(true).
	(char_data_handler): if the current element IsCDataVerbatim, just
	append the input string and return.

2009-05-16  Alan McGovern  <amcgovern@novell.com>

	* security.c: Bump the security env var to _04

2009-05-16  Alan McGovern  <amcgovern@novell.com>

	* cbinding.h:
	* animation.h:
	* cbinding.cpp:
	* animation.cpp:
	* application.h:
	* application.cpp:
	* dependencyproperty.g.cpp: Add type converting to
	  ObjectKeyFrame. The conversion is done during the Resolve
	  phase. If the type conversion can't be completed an
	  exception is thrown.

2009-05-15  Chris Toshok  <toshok@ximian.com>

	* dependencyobject.cpp (DependencyObject::RegisterAllNamesRootedAt):
	in the hydrated case we still need to register our name.
	(DependencyObject::ProviderValueChanged): don't swallow the error
	when we SetParent on the new_as_dep.
	(DependencyObject::SetParent): if we're adding a Hydrated
	element (i.e. one that was loaded using LoadComponent), we need to
	register its name into the parent namescope.  Also, move the
	quickest check to the top so we don't do the family check on every
	SetParent call if the before/after parent are the same.  Lastly,
	we only register names if the current parent is NULL.  That is, if
	a named brush is a property on an element already, and its name is
	registered, we don't register it in the new namescope when it's
	set as a property on a second element.  Odd but it matches SL
	behavior.
	(DependencyObject::FindName): no longer walk up the namescope
	hierarchy, and don't look up things in the toplevel's namescope
	either.

	* dependencyobject.h (class DependencyObject): add